@@ -1,9 +1,16 @@
 update-manager (1:0.59.1) feisty; urgency=low
 
+  [ Michael Vogt ]
   * DistUpgrade/DistUpgradeViewGtk.py:
     - do not fail if loading the svg pixbuf loader fails (LP#91593)
 
- --
+  [ Jonathan Riddell ]
+  * DistUpgrade/DistUpgradeViewKDE.py:
+    - import KRun, closes https://launchpad.net/bugs/91072
+    - fix non-existant variable use, closes https://launchpad.net/bugs/91386
+    - fix incorrect method name, closes https://launchpad.net/bugs/91295
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 12 Mar 2007 19:00:07 +0000
 
 update-manager (1:0.59) feisty; urgency=low
 
